@@ -43,8 +43,8 @@ DEFAULTS = {
     "cheetah_import_whitelist"    : [ "re", "random", "time" ],
     "cobbler_master"              : '',
     "default_kickstart"           : "/var/lib/cobbler/kickstarts/default.ks",
-    "default_name_servers"        : '',
-    "default_name_servers_search" : '',
+    "default_name_servers"        : [],
+    "default_name_servers_search" : [],
     "default_password_crypted"    : "\$1\$mF86/UHC\$WvcIcX2t6crBz2onWxyac.",
     "default_virt_bridge"         : "xenbr0",
     "default_virt_type"           : "auto",
