@@ -580,7 +580,7 @@ redhatmanagementserver"
        #set joined = " ".join($system.name_servers)
        <input type="text" size="255" style="width: 400px;" name="name_servers" id="name_servers" value="$joined" />
     #else
-       <input type="text" size="255" style="width: 400px;" name="name_servers" id="name_servers" value="<<inherit>>" />
+       <input type="text" size="255" style="width: 400px;" name="name_servers" id="name_servers" value="" />
     #end if
     <p class="context-tip">Name servers, space delimited, if not provided by DHCP</p>
     </td>
@@ -595,7 +595,7 @@ redhatmanagementserver"
        #set joined = " ".join($system.name_servers_search)
        <input type="text" size="255" style="width: 400px;" name="name_servers_search" id="name_servers_search" value="$joined" />
     #else
-       <input type="text" size="255" style="width: 400px;" name="name_servers_search" id="name_servers_search" value="<<inherit>>" />
+       <input type="text" size="255" style="width: 400px;" name="name_servers_search" id="name_servers_search" value="" />
     #end if
     <p class="context-tip">Name servers search path, space delimited, if not provided by DHCP</p>
     </td>
